<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:src="@drawable/header" />

    <RelativeLayout
        android:id="@+id/relative_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_header">

        <Button
            android:id="@+id/btn_learn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:text="@string/learn" />

        <Button
            android:id="@+id/btn_practice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_learn"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:text="@string/practice" />

        <Button
            android:id="@+id/btn_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_practice"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:text="@string/test" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/image_icon"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/relative_btn">
        <ImageView
            android:id="@+id/img3_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/ba" />
        <ImageView
            android:id="@+id/img1_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/img3_icon"
            android:layout_alignParentBottom="true"
            android:src="@drawable/mot" />
        <ImageView
            android:id="@+id/img2_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/img1_icon"
            android:layout_alignParentBottom="true"
            android:src="@drawable/hai" />
    </RelativeLayout>
</RelativeLayout>